[package]
name = "hodor"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
byteorder = "1"
#ff = {package = "ff_ce", path = "../ff", features = ["derive"]}
ff = {package = "ff_ce", version = "0.7", features = ["derive"]}
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
hex = "0.3.2"
tiny-keccak = "1.4.2"
rust-crypto = "0.2"
futures = "0.1"
futures-cpupool = {version = "0.1"}
num_cpus = {version = "1"}
crossbeam = {version = "0.7.1"}

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"