[package]
name = "hodor"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of Stark proof system engine"
documentation = "https://github.com/shamatar/hodor"
homepage = "https://github.com/shamatar/hodor"
repository = "https://github.com/shamatar/hodor"

[dependencies]
rand = "0.4"
byteorder = "1"
ff = {package = "ff_ce", version = "0.7", features = ["derive"]}
hex = "0.3.2"
tiny-keccak = "1.5"
rust-crypto = "0.2"
futures = "0.1"
futures-cpupool = {version = "0.1"}
num_cpus = {version = "1"}
crossbeam = {version = "0.7"}
blake2b_simd = {version = "0.5"}
blake2s_simd = {version = "0.5"}
lazy_static = "1.3"
cfg-if = "0.1"
indexmap = "1"

prefetch = {version = "0.2", optional = true}

[features]
nightly = ["prefetch"]