[package]
name = "hodor"
version = "0.1.1-alpha.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of Stark proof system engine"
documentation = "https://github.com/shamatar/hodor"
homepage = "https://github.com/shamatar/hodor"
repository = "https://github.com/shamatar/hodor"
publish = false

[dependencies]
rand = "0.4"
byteorder = "1"
ff = {package = "ff_ce", version = "0.12", features = ["derive", "asm_derive"]}
hex = "0.4.2"
tiny-keccak = "1.5"
rust-crypto = "0.2"
futures = "0.1"
futures-cpupool = {version = "0.1"}
num_cpus = {version = "1"}
crossbeam = {version = "0.8"}
blake2b_simd = {version = "0.5"}
blake2s_simd = {version = "0.5"}
lazy_static = "1.4"
cfg-if = "1.0"
indexmap = "1"
objekt = "0.1"
openzkp_primefield = {package = "zkp-primefield", git = "https://github.com/0xProject/OpenZKP"}

[dev-dependencies]
criterion = "0.3"
criterion_convenience = {path = "./tools/criterion_convenience"}

[[bench]]
name = "benchmarks"
harness = false